--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -261,6 +261,7 @@
     "edt_conf_audio_effects_expl":  "Select an effect on how the audio signal is transformed to",
     "edt_conf_audio_effects_title":  "Audio Effects",
     "edt_conf_audio_effect_enum_vumeter": "VU-Meter",
+    "edt_conf_audio_effect_enum_fft": "FFT",
     "edt_conf_audio_effect_hotcolor_expl": "Hot Color",
     "edt_conf_audio_effect_hotcolor_title": "Hot Color",
     "edt_conf_audio_effect_multiplier_expl": "Audio Signal Value multiplier",
@@ -269,6 +270,7 @@
     "edt_conf_audio_effect_safecolor_title": "Safe Color",
     "edt_conf_audio_effect_safevalue_expl": "Safe Threshold",
     "edt_conf_audio_effect_safevalue_title": "Safe Threshold",
+    "edt_conf_audio_effect_resolution_title": "Resolution",
     "edt_conf_audio_effect_set_defaults": "Reset to default values",
     "edt_conf_audio_effect_tolerance_expl": "Tolerance used when auto calculating a signal multipler from 0-100",
     "edt_conf_audio_effect_tolerance_title": "Tolerance",
