--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -238,6 +238,7 @@
     "edt_conf_audio_device_expl": "Dispositivo de entrada de audio seleccionado",
     "edt_conf_audio_device_title": "Dispositivo de Audio",
     "edt_conf_audio_effect_enum_vumeter": "Medidor-UV",
+    "edt_conf_audio_effect_enum_fft": "FFT",
     "edt_conf_audio_effect_hotcolor_expl": "Color Caliente",
     "edt_conf_audio_effect_hotcolor_title": "Color Caliente",
     "edt_conf_audio_effect_multiplier_expl": "Multiplicador de Valor de Señal de Audio",
